--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3.8'
 services:
   web:
     build: ./project
-    command: uvicorn api.main:api --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
-      - ./project:/usr/src/api
+      - ./project:/usr/src/app
     ports:
       - 8004:8000
     environment:
